# Future

./: CMakeLists.txt  Future.h  FutureImplementation.hpp  Promise.h  PromiseImplementation.hpp  README.md  SharedState.h  main.cpp
exceptions/: AbandonFuture.h  NoData.h
